// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders error alert 1`] = `
<div>
  <div
    class="alert error"
  >
    <div
      class="icon"
    >
      <i
        class="ri-close-circle-fill"
      />
    </div>
    <div
      class="body"
    >
      <div
        class="message"
      >
        This is a error alert.
      </div>
    </div>
  </div>
</div>
`;

exports[`renders info alert 1`] = `
<div>
  <div
    class="alert info"
  >
    <div
      class="icon"
    >
      <i
        class="ri-information-fill"
      />
    </div>
    <div
      class="body"
    >
      <div
        class="message"
      >
        This is a info alert.
      </div>
    </div>
  </div>
</div>
`;

exports[`renders success alert 1`] = `
<div>
  <div
    class="alert success"
  >
    <div
      class="icon"
    >
      <i
        class="ri-checkbox-circle-fill"
      />
    </div>
    <div
      class="body"
    >
      <div
        class="message"
      >
        This is a success alert.
      </div>
    </div>
  </div>
</div>
`;

exports[`renders warning alert 1`] = `
<div>
  <div
    class="alert warning"
  >
    <div
      class="icon"
    >
      <i
        class="ri-alert-fill"
      />
    </div>
    <div
      class="body"
    >
      <div
        class="message"
      >
        This is a warning alert.
      </div>
    </div>
  </div>
</div>
`;
